# notepad-offsite

./: .gitignore  README.md
projects/dekomiss/: .env.example  .gitignore  README.md  backlog.md  pyproject.toml  skill.md
projects/dekomiss/.agents/skills/develop-graph-notepad/: skill.md
projects/dekomiss/.agents/skills/test-graph-notepad/: SKILL.md
projects/dekomiss/app/: __init__.py  config.py  db.py  embeddings.py  graph.py  main.py
projects/dekomiss/app/static/: app.js  index.html  style.css
projects/dekomiss/scripts/: smoke.py
