[project]
name = "note-graph"
version = "0.1.0"
description = "Local semantic note graph"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlite-vec>=0.1.6",
    "sentence-transformers>=2.7",
    "numpy>=1.26",
    "networkx>=3.2",
    "python-louvain>=0.16",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
